--- a/composer.json
+++ b/composer.json
@@ -9,25 +9,34 @@
     }
   },
   "authors": [
-    { "name": "SabbirHR", "email": "sabbirhossen860@gmail.com" }
+    {
+      "name": "SabbirHR",
+      "email": "sabbirhossen860@gmail.com"
+    }
   ],
   "require": {
+    "php": "^8.3",
     "spatie/laravel-permission": "^6.10",
     "marcin-orlowski/laravel-api-response-builder": "^12.0",
     "laravel/sanctum": "^4.0",
     "sabbir/response-builder": "@dev"
   },
   "repositories": [
-       {
-           "type": "path",
-           "url": "../response-builder"
-       }
-   ],
+    {
+      "type": "path",
+      "url": "../response-builder",
+      "options": {
+        "symlink": true
+      }
+    }
+  ],
   "extra": {
     "laravel": {
       "providers": [
         "Larashield\\Providers\\LarashieldServiceProvider"
       ]
     }
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
