feat: make Larashield self-installing by auto-publishing configs and running migrations in service provider and AuthController

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,11 @@
       ]
     }
   },
+  "scripts": {
+    "post-autoload-dump": [
+      "@php artisan package:discover --ansi"
+    ]
+  },
   "minimum-stability": "dev",
   "prefer-stable": true
 }
