--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "sabbir/larashield",
+  "name": "SabbirHR/larashield",
   "description": "User, Role, Auth management package with ResponseBuilder and Policies",
   "type": "library",
   "license": "MIT",
